doku/tests/compiletest/items/union.rs
use doku::Document;

#[derive(Document)]
union Person {
    age: u8,
}

fn main() {
    //
}
